[tool.poetry]
name = "infraformer"
version = "0.1.0"
description = ""
authors = ["Riccardo Tacconi <team@recursivelabs.cloud>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.37"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
black = "22.3.0"
pre-commit = "2.18.1"
isort = "5.10.1"
python-lsp-server = "1.4.1"
pyls-mypy = "0.1.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iform = "infraformer.main:main"
